@ refactor: replace Jersey REST Client with java.net.http.HttpClient
Replace the Jersey-based REST client with java.net.http.HttpClient and
StAX-based XML response parsing.

- Extract GlassFishXMLParser for StAX XML-to-Map parsing
- Replace Jersey/JAX-RS with Record types using fromParsedMap factories
- Inner SubComponents.ModuleInfo record for moduleInfo parsing
- Rewrite GlassFishRestClient with HttpClient, MultipartBodyPublisher
- Enable HttpClient.Redirect.NORMAL, reuse executeGet in isDASRunning
- Use multipart POST with __deleteoperation for undeploy (matching old)
- Use multipart POST for deploy (matching old CommonGlassFishManager)
- getSubComponents overloads: no-arg and (name,module,type)
- VirtualServerAttribute.networkListeners typed as List<String>
- NetworkListenerAttribute.port kept as String (parsed in getPortValue)
- getActiveHttpPort returns String, getPortValue used in all strategies
- Parse /list-instances from extraProperties.instanceList
- Map/List fields guaranteed non-null, filter null ModuleInfo entries
- glassfish.version upgraded to 7.1.1, inherited by child modules
- Plugin versions extracted to properties
- Convert README to markdown, clean up content
- Integration tests for GlassFishRestClient and AdminClient
- Cargo artifactInstaller for remote, maven-dependency-plugin for managed
- CI: upload server.log on failure, 5min timeout, path filters

Co-Authored-By: Claude <noreply@anthropic.com>
@