@@ -1,14 +1,16 @@
 package org.jboss.arquillian.container.glassfish.test;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
 import jakarta.servlet.annotation.WebServlet;
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.URL;
-import java.net.URLConnection;
 import org.jboss.arquillian.test.api.ArquillianResource;
 import org.junit.jupiter.api.Test;
+
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.net.URI;
+import java.net.URL;
+import java.net.URLConnection;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 
 public abstract class GlassFishDeploymentTestTemplate {
@@ -18,17 +20,18 @@ public abstract class GlassFishDeploymentTestTemplate {
 
     @Test
     public void shouldBeAbleToDeployEnterpriseArchive() throws Exception {
-        final String servletPath =
-            greeterImplementationBasedOnDerbyEnabled().getAnnotation(WebServlet.class)
-                .urlPatterns()[0];
+        final String servletPath = greeterImplementationBasedOnDerbyEnabled()
+            .getAnnotation(WebServlet.class)
+            .urlPatterns()[0];
 
-        final URLConnection response = new URL(
-            deploymentUrl.toString() + servletPath.substring(1)).openConnection();
+        final URLConnection response = URI.create(deploymentUrl.toString() + servletPath.substring(1))
+            .toURL()
+            .openConnection();
 
-        BufferedReader in = new BufferedReader(new InputStreamReader(response.getInputStream()));
-        final String result = in.readLine();
-
-        assertEquals("Hello", result);
+        try (var in = new BufferedReader(new InputStreamReader(response.getInputStream()))) {
+            final String result = in.readLine();
+            assertEquals("Hello", result);
+        }
     }
 
     public static Class<?> greeterImplementationBasedOnDerbyEnabled() {
